minor revisions done

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 </button>
             </div>
             
+            <img src="./ASCII-Table.png" alt="" class="ascii">
+
             <div class="cipher3">
                 <h1>ROT13</h1>
                 <p>This is a variant of Ceasar Cipher in which the shift is always 13</p>
